[package]
name = "takyon"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A simple, single threaded async runtime"
repository = "https://github.com/UditDey/takyon/"
readme = "README.md"
keywords = ["async", "runtime", "io_uring"]
categories = ["asynchronous", "filesystem", "network-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nohash = "0.2.0"
pin-project-lite = "0.2.13"

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = "0.6.2"
libc = "0.2.149"